header content added

--- a/index.html
+++ b/index.html
@@ -6,6 +6,16 @@
     <link rel="stylesheet" href="./assets/css/main.css">
   </head>
   <body>
-
+    <!-- Header -->
+    <header>
+      <img src="./assets/img/ic-logo.svg" alt="Lion logo">
+      <h1>COLMAR<span>ACADEMY</span></h1>
+      <nav>
+        <span><a href="#">Our Campus</a></span>
+        <span><a href="#">Online</a></span>
+        <span><a href="#">For Companies</a></span>
+        <span><a href="#">Sign in</a></span>
+      </nav>
+    </header>
   </body>
 </html>
