--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
   </head>
   <body>
     <!-- Header -->
-    <header>
-      <img src="./assets/img/ic-logo.svg" alt="Lion logo">
-      <h1>COLMAR<span>ACADEMY</span></h1>
+    <header class="flex-container">
+      <img class="logo" src="./assets/img/ic-logo.svg" alt="Lion logo">
+      <h1>COLMAR<span class="alt-h1">ACADEMY</span></h1>
       <nav>
-        <span><a href="#">Our Campus</a></span>
+        <span><a href="#">On Campus</a></span>
         <span><a href="#">Online</a></span>
         <span><a href="#">For Companies</a></span>
         <span><a href="#">Sign in</a></span>
