--- a/index.html
+++ b/index.html
@@ -1,20 +1,39 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" charset="utf-8"/>
     <title>Welcome to Colmar Academy</title>
     <link rel="stylesheet" href="./assets/css/main.css">
   </head>
   <body>
     <!-- Header -->
     <header class="flex-container">
-      <img class="logo" src="./assets/img/ic-logo.svg" alt="Lion logo">
-      <h1>COLMAR<span class="alt-h1">ACADEMY</span></h1>
-      <nav>
-        <span><a href="#">On Campus</a></span>
-        <span><a href="#">Online</a></span>
-        <span><a href="#">For Companies</a></span>
-        <span><a href="#">Sign in</a></span>
+      <img class="header-logo desktop-only" src="./assets/img/ic-logo.svg" alt="Logo">
+      <h1 class="header-title desktop-only">COLMAR</h1>
+      <h1 class="header-title header-title-alt desktop-only">ACADEMY</h1>
+      <nav class="desktop-only">
+        <ul>
+          <li><a href="#">On Campus</a></li>
+          <li><a href="#">Online</a></li>
+          <li><a href="#">For Companies</a></li>
+          <li><a href="#">Sign In</a></li>
+        </ul>
+      </nav>
+      <nav class="mobile-only">
+        <ul>
+          <li><a href="#">
+            <img src="./assets/img/ic-logo.svg" alt="Logo">
+          </a></li>
+          <li><a href="#">
+            <img src="./assets/img/ic-on-campus.svg" alt="On Campus">
+          </a></li>
+          <li><a href="#">
+            <img src="./assets/img/ic-online.svg" alt="Online">
+          </a></li>
+          <li><a href="#">
+            <img src="./assets/img/ic-login.svg" alt="Sign In">
+          </a></li>
+        </ul>
       </nav>
     </header>
   </body>
