--- a/index.html
+++ b/index.html
@@ -3,9 +3,11 @@
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" charset="utf-8"/>
     <title>Welcome to Colmar Academy</title>
+    <link rel="stylesheet" href="./assets/css/reset.css">
     <link rel="stylesheet" href="./assets/css/main.css">
   </head>
   <body>
+
     <!-- Header -->
     <header class="flex-container">
       <img class="header-logo desktop-only" src="./assets/img/ic-logo.svg" alt="Logo">
@@ -36,5 +38,49 @@
         </ul>
       </nav>
     </header>
+
+    <!-- Main content -->
+    <div class="main-content">
+
+      <!-- Learn -->
+      <div class="card card-dark">
+        <div class="card-img-holder desktop-only">
+          <img src="./assets/img/banner.jpg" alt="">
+        </div>
+        <div class="flex-container card-info-holder ">
+          <div class="banner-limit">
+            <h1>Learn something new everyday</h1>
+            <h3>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h3>
+            <a class="button" href="#">Start here</a>
+          </div>
+        </div>
+      </div>
+
+      <!-- Practice -->
+      <div class="">
+        <img src="" alt="">
+      </div>
+
+      <!-- Start -->
+      <div class="">
+
+      </div>
+
+      <!-- Thesis -->
+      <div class="">
+
+      </div>
+
+    </div>
+
+    <!-- Footer -->
+    <footer class="flex-container">
+      <span class="copyright">©2016 Colmar Academy. All rights reserved</span>
+      <ul class="desktop-only">
+        <li><a href="#">Terms</a></li>
+        <li><a href="#">Privacy</a></li>
+      </ul>
+    </footer>
+
   </body>
 </html>
