--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 
     <!-- Header -->
     <header class="flex-container">
-      <img class="header-logo desktop-only" src="./assets/img/ic-logo.svg" alt="Logo">
+      <img class="header-logo desktop-only" src="./assets/img/ic-logo.svg"
+      alt="Logo">
       <h1 class="header-title desktop-only">COLMAR</h1>
       <h1 class="header-title header-title-alt desktop-only">ACADEMY</h1>
       <nav class="desktop-only">
@@ -50,15 +51,53 @@
         <div class="flex-container card-info-holder ">
           <div class="banner-limit">
             <h1>Learn something new everyday</h1>
-            <h3>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h3>
+            <h4>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h4>
             <a class="button" href="#">Start here</a>
           </div>
         </div>
       </div>
 
       <!-- Practice -->
-      <div class="">
-        <img src="" alt="">
+      <div class="card card-light">
+        <div class="card desktop-only">
+          <div class="card-img-holder">
+            <img src="./assets/img/information-main.jpg" alt="">
+          </div>
+          <h1>It doesn't hurt to keep practicing</h1>
+          <p>"Curabitur vitae libero in ipsum porttitor consequat. Aliquam et
+            commodo lectus, nec consequat neque. Sed non accumsan urna.
+            Phasellus sed consequat ex. Etium eget magna laoreet, efficitur
+            dolor consequat, tristique ligula."</p>
+          <p>Emanuel, Sr Strategist at Hiring.com</p>
+        </div>
+        <div class="">
+          <div class="">
+            <div class="card-img-holder">
+              <img alt=""
+              src="./assets/img/information-orientation.jpg">
+            </div>
+            <h4>Orientation date</h4>
+            <p>Tue 10/11 & Wed 10/12: 8am-3pm</p>
+            <a href="#">Read more</a>
+          </div>
+          <div class="">
+            <div class="card-img-holder">
+              <img alt=""
+              src="./assets/img/information-campus.jpg">
+            <h4>Our campus</h4>
+            <p>Find which campus is close by you</p>
+            <a href="#">Read more</a>
+          </div>
+          <div class="">
+            <div class="card-img-holder">
+              <img alt=""
+              src="./assets/img/information-guest-lecture.jpg">
+            <h4>Our guest lecture</h4>
+            <p>Join a keynote with Oliver Sack about music in medical
+              treatment</p>
+            <a href="#">Read more</a>
+          </div>
+        </div>
       </div>
 
       <!-- Start -->
