--- a/index.html
+++ b/index.html
@@ -44,76 +44,154 @@
     <div class="main-content">
 
       <!-- Learn -->
-      <div class="card card-dark">
-        <div class="card-img-holder desktop-only">
-          <img src="./assets/img/banner.jpg" alt="">
+      <div class="section bg-dark">
+
+        <div class="card desktop-only">
+          <div class="img-container width60">
+            <img src="./assets/img/banner.jpg" alt="">
+          </div>
         </div>
-        <div class="flex-container card-info-holder ">
-          <div class="banner-limit">
+
+        <div class="card info">
+          <div class="width80">
             <h1>Learn something new everyday</h1>
             <h4>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h4>
             <a class="button" href="#">Start here</a>
           </div>
         </div>
+
       </div>
 
       <!-- Practice -->
-      <div class="card card-light">
-        <div class="card desktop-only">
-          <div class="card-img-holder">
-            <img src="./assets/img/information-main.jpg" alt="">
+      <div class="section bg-light">
+
+        <div class="card desktop-only stack">
+          <div class="card">
+            <div class="img-container width60">
+              <img src="./assets/img/information-main.jpg" alt="">
+            </div>
           </div>
-          <h1>It doesn't hurt to keep practicing</h1>
-          <p>"Curabitur vitae libero in ipsum porttitor consequat. Aliquam et
-            commodo lectus, nec consequat neque. Sed non accumsan urna.
-            Phasellus sed consequat ex. Etium eget magna laoreet, efficitur
-            dolor consequat, tristique ligula."</p>
-          <p>Emanuel, Sr Strategist at Hiring.com</p>
+
+          <div class="card info">
+            <h1>It doesn't hurt to keep practicing</h1>
+            <p class="quote">"Curabitur vitae libero in ipsum porttitor
+              consequat. Aliquam et commodo lectus, nec consequat neque.
+              Sed non accumsan urna. Phasellus sed consequat ex. Etium eget
+              magna laoreet, efficitur dolor consequat, tristique ligula."</p>
+            <p>Emanuel, Sr Strategist at Hiring.com</p>
+          </div>
         </div>
-        <div class="">
+
+        <div class="card stack">
           <div class="">
-            <div class="card-img-holder">
+            <div class="img-container">
               <img alt=""
               src="./assets/img/information-orientation.jpg">
             </div>
-            <h4>Orientation date</h4>
-            <p>Tue 10/11 & Wed 10/12: 8am-3pm</p>
-            <a href="#">Read more</a>
+            <div class="card info">
+              <h4>Orientation date</h4>
+              <p>Tue 10/11 & Wed 10/12: 8am-3pm</p>
+              <a href="#">Read more</a>
+            </div>
           </div>
           <div class="">
-            <div class="card-img-holder">
+            <div class="img-container">
               <img alt=""
               src="./assets/img/information-campus.jpg">
-            <h4>Our campus</h4>
-            <p>Find which campus is close by you</p>
-            <a href="#">Read more</a>
+            </div>
+            <div class="card info">
+              <h4>Our campus</h4>
+              <p>Find which campus is close by you</p>
+              <a href="#">Read more</a>
+            </div>
           </div>
           <div class="">
-            <div class="card-img-holder">
+            <div class="img-container">
               <img alt=""
               src="./assets/img/information-guest-lecture.jpg">
-            <h4>Our guest lecture</h4>
-            <p>Join a keynote with Oliver Sack about music in medical
-              treatment</p>
-            <a href="#">Read more</a>
+            </div>
+            <div class="card info">
+              <h4>Our guest lecture</h4>
+              <p>Join a keynote with Oliver Sack about music in medical
+                treatment</p>
+              <a href="#">Read more</a>
+            </div>
           </div>
         </div>
       </div>
 
       <!-- Start -->
-      <div class="">
-
+      <div class="section bg-medium">
+        <h1>Start learning</h1>
+        <div class="card">
+          <div class="card">
+            <h4>Software engineering</h4>
+            <img src="course-software.jpg" alt="">
+            <p>COURSES</p>
+            <p>Web Development, Mobile Development, iOT, APIs</p>
+          </div>
+          <div class="card">
+            <h4>Computer art</h4>
+            <img src="course-computer-art.jpg" alt="">
+            <p>COURSES</p>
+            <p>Imaging & Design, Web Design, Motion Graphics & Visual Effects
+            , Computer Animation</p>
+          </div>
+          <div class="card">
+            <h4>Design</h4>
+            <img src="course-design.jpg" alt="">
+            <p>COURSES</p>
+            <p>User Experience Design, User Research, Visual Design</p>
+          </div>
+          <div class="card">
+            <h4>Data</h4>
+            <img src="course-data.jpg" alt="">
+            <p>COURSES</p>
+            <p>Data Sciene, Big Data, SQL, Data Visualization</p>
+          </div>
+          <div class="card">
+            <h4>Business</h4>
+            <img src="course-business.jpg" alt="">
+            <p>COURSES</p>
+            <p>Product Development, Business Development, Startup</p>
+          </div>
+          <div class="card">
+            <h4>Marketing</h4>
+            <img src="course-marketing.jpg" alt="">
+            <p>COURSES</p>
+            <p>Analytics, Content Marketing, Mobile Marketing</p>
+          </div>
+        </div>
       </div>
 
       <!-- Thesis -->
-      <div class="">
-
+      <div class="section bg-light">
+        <h1>Thesis exhibit</h1>
+        <div class="">
+          <h4>Reimagine urban</h4>
+          <p class="quote">"Curabitur vitae libero in ipsum porttitor
+            consequat. Aliquam et commodo lectus, nec consequat neque.
+            Sed non accumsan urna. Phasellus sed consequat ex. Etium eget
+            magna laoreet, efficitur dolor consequat, tristique ligula."</p>
+        </div>
+        <div class="">
+          <div class="">
+            <img src="thesis-fisma.jpg" alt="">
+            <h4>Fisma: Design and</h4>
+            <p>Designer showcase of new prototype product</p>
+          </div>
+          <div class="">
+            <img src="thesis-now-and-then.jpg" alt="">
+            <h4>Now and then</h4>
+            <p>Research study about New York</p>
+          </div>
+        </div>
       </div>
 
     </div>
 
     <!-- Footer -->
-    <footer class="flex-container">
+    <footer class="flex-container bg-light">
       <span class="copyright">©2016 Colmar Academy. All rights reserved</span>
       <ul class="desktop-only">
         <li><a href="#">Terms</a></li>
