--- a/index.html
+++ b/index.html
@@ -2,14 +2,15 @@
 <html>
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" charset="utf-8"/>
-    <title>Welcome to Colmar Academy</title>
     <link rel="stylesheet" href="./assets/css/reset.css">
     <link rel="stylesheet" href="./assets/css/main.css">
+    <title>Welcome to Colmar Academy</title>
   </head>
   <body>
 
     <!-- Header -->
-    <header class="flex-container">
+    <header>
+
       <img class="header-logo desktop-only" src="./assets/img/ic-logo.svg"
       alt="Logo">
       <h1 class="header-title desktop-only">COLMAR</h1>
@@ -22,6 +23,7 @@
           <li><a href="#">Sign In</a></li>
         </ul>
       </nav>
+
       <nav class="mobile-only">
         <ul>
           <li><a href="#">
@@ -43,155 +45,172 @@
     <!-- Main content -->
     <div class="main-content">
 
-      <!-- Learn -->
-      <div class="section bg-dark">
+      <!-- Banner Section -->
+      <div id="banner" class="section bg-dark">
 
-        <div class="card desktop-only">
-          <div class="img-container width60">
-            <img src="./assets/img/banner.jpg" alt="">
-          </div>
+        <div class="img-container desktop-only">
+          <img src="./assets/img/banner.jpg" alt="">
         </div>
-
-        <div class="card info">
-          <div class="width80">
-            <h1>Learn something new everyday</h1>
-            <h4>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h4>
-            <a class="button" href="#">Start here</a>
-          </div>
+        <div class="">
+          <h1>Learn something new everyday</h1>
+          <h4>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h4>
+          <a class="button" href="#">Start here</a>
         </div>
 
       </div>
 
-      <!-- Practice -->
-      <div class="section bg-light">
+      <!-- Information Section -->
+      <div id="information" class="section">
 
-        <div class="card desktop-only stack">
-          <div class="card">
-            <div class="img-container width60">
-              <img src="./assets/img/information-main.jpg" alt="">
-            </div>
+        <!--Information Main -->
+        <div class="desktop-only">
+
+          <div class="img-container">
+            <img src="./assets/img/information-main.jpg" alt="">
           </div>
 
-          <div class="card info">
+          <div class="">
             <h1>It doesn't hurt to keep practicing</h1>
-            <p class="quote">"Curabitur vitae libero in ipsum porttitor
+            <p>"Curabitur vitae libero in ipsum porttitor
               consequat. Aliquam et commodo lectus, nec consequat neque.
               Sed non accumsan urna. Phasellus sed consequat ex. Etium eget
               magna laoreet, efficitur dolor consequat, tristique ligula."</p>
             <p>Emanuel, Sr Strategist at Hiring.com</p>
           </div>
+
         </div>
 
-        <div class="card stack">
+        <!--Information Cards -->
+        <div class="">
+
           <div class="">
             <div class="img-container">
               <img alt=""
               src="./assets/img/information-orientation.jpg">
             </div>
-            <div class="card info">
+            <div class="">
               <h4>Orientation date</h4>
               <p>Tue 10/11 & Wed 10/12: 8am-3pm</p>
               <a href="#">Read more</a>
             </div>
           </div>
+
           <div class="">
             <div class="img-container">
               <img alt=""
               src="./assets/img/information-campus.jpg">
             </div>
-            <div class="card info">
+            <div class="">
               <h4>Our campus</h4>
               <p>Find which campus is close by you</p>
               <a href="#">Read more</a>
             </div>
           </div>
+
           <div class="">
             <div class="img-container">
               <img alt=""
               src="./assets/img/information-guest-lecture.jpg">
             </div>
-            <div class="card info">
+            <div class="">
               <h4>Our guest lecture</h4>
               <p>Join a keynote with Oliver Sack about music in medical
                 treatment</p>
               <a href="#">Read more</a>
             </div>
           </div>
+
         </div>
+
       </div>
 
-      <!-- Start -->
-      <div class="section bg-medium">
+      <!-- Start Learning Section-->
+      <div id="learn" class="section stack bg-medium">
+
         <h1>Start learning</h1>
-        <div class="card">
-          <div class="card">
+        <div class="">
+
+          <div class="">
             <h4>Software engineering</h4>
-            <img src="course-software.jpg" alt="">
+            <img src="./assets/img/course-software.jpg" alt="">
             <p>COURSES</p>
             <p>Web Development, Mobile Development, iOT, APIs</p>
           </div>
-          <div class="card">
+
+          <div class="">
             <h4>Computer art</h4>
-            <img src="course-computer-art.jpg" alt="">
+            <img src="./assets/img/course-computer-art.jpg" alt="">
             <p>COURSES</p>
             <p>Imaging & Design, Web Design, Motion Graphics & Visual Effects
             , Computer Animation</p>
           </div>
-          <div class="card">
+
+          <div class="">
             <h4>Design</h4>
-            <img src="course-design.jpg" alt="">
+            <img src="./assets/img/course-design.jpg" alt="">
             <p>COURSES</p>
             <p>User Experience Design, User Research, Visual Design</p>
           </div>
-          <div class="card">
+
+          <div class="">
             <h4>Data</h4>
-            <img src="course-data.jpg" alt="">
+            <img src="./assets/img/course-data.jpg" alt="">
             <p>COURSES</p>
             <p>Data Sciene, Big Data, SQL, Data Visualization</p>
           </div>
-          <div class="card">
+
+          <div class="">
             <h4>Business</h4>
-            <img src="course-business.jpg" alt="">
+            <img src="./assets/img/course-business.jpg" alt="">
             <p>COURSES</p>
             <p>Product Development, Business Development, Startup</p>
           </div>
-          <div class="card">
+
+          <div class="">
             <h4>Marketing</h4>
-            <img src="course-marketing.jpg" alt="">
+            <img src="./assets/img/course-marketing.jpg" alt="">
             <p>COURSES</p>
             <p>Analytics, Content Marketing, Mobile Marketing</p>
           </div>
+
         </div>
       </div>
 
-      <!-- Thesis -->
-      <div class="section bg-light">
+      <!-- Thesis Section-->
+      <div id="thesis" class="section">
+
         <h1>Thesis exhibit</h1>
         <div class="">
+          <div class="img-container">
+            <img src="./assets/img/banner.jpg" alt="">
+          </div>
+
           <h4>Reimagine urban</h4>
           <p class="quote">"Curabitur vitae libero in ipsum porttitor
             consequat. Aliquam et commodo lectus, nec consequat neque.
             Sed non accumsan urna. Phasellus sed consequat ex. Etium eget
             magna laoreet, efficitur dolor consequat, tristique ligula."</p>
         </div>
+
         <div class="">
           <div class="">
-            <img src="thesis-fisma.jpg" alt="">
+            <img src="./assets/img/thesis-fisma.jpg" alt="">
             <h4>Fisma: Design and</h4>
             <p>Designer showcase of new prototype product</p>
           </div>
           <div class="">
-            <img src="thesis-now-and-then.jpg" alt="">
+            <img src="./assets/img/thesis-now-and-then.jpg" alt="">
             <h4>Now and then</h4>
             <p>Research study about New York</p>
           </div>
         </div>
+
       </div>
 
     </div>
 
     <!-- Footer -->
-    <footer class="flex-container bg-light">
+    <footer>
       <span class="copyright">©2016 Colmar Academy. All rights reserved</span>
       <ul class="desktop-only">
         <li><a href="#">Terms</a></li>
