--- a/index.html
+++ b/index.html
@@ -49,9 +49,11 @@
       <!-- Banner Section -->
       <div id="banner" class="section bg-dark">
 
-        <div class="img-container desktop-only">
-          <img src="./assets/img/banner.jpg" alt="">
+        <div class="img-container">
+          <img class="desktop-only" src="./assets/img/banner.jpg" alt="">
+          <img class="mobile-only"src="./assets/img/banner.jpg" alt="">
         </div>
+
         <div class="">
           <h1>Learn something new everyday</h1>
           <h4>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h4>
@@ -132,44 +134,56 @@
         <div class="card-grid">
 
           <div class="card">
+            <div class="img-container">
+              <img src="./assets/img/course-software.jpg" alt="">              
+            </div>
             <h4>Software engineering</h4>
-            <img src="./assets/img/course-software.jpg" alt="">
             <p>COURSES</p>
             <p>Web Development, Mobile Development, iOT, APIs</p>
           </div>
 
           <div class="card">
+            <div class="img-container">
+              <img src="./assets/img/course-computer-art.jpg" alt="">
+            </div>
             <h4>Computer art</h4>
-            <img src="./assets/img/course-computer-art.jpg" alt="">
             <p>COURSES</p>
             <p>Imaging & Design, Web Design, Motion Graphics & Visual Effects
             , Computer Animation</p>
           </div>
 
           <div class="card">
+            <div class="img-container">
+              <img src="./assets/img/course-design.jpg" alt="">
+            </div>
             <h4>Design</h4>
-            <img src="./assets/img/course-design.jpg" alt="">
             <p>COURSES</p>
             <p>User Experience Design, User Research, Visual Design</p>
           </div>
 
           <div class="card">
+            <div class="img-container">
+              <img src="./assets/img/course-data.jpg" alt="">
+            </div>
             <h4>Data</h4>
-            <img src="./assets/img/course-data.jpg" alt="">
             <p>COURSES</p>
             <p>Data Sciene, Big Data, SQL, Data Visualization</p>
           </div>
 
           <div class="card">
+            <div class="img-container">
+              <img src="./assets/img/course-business.jpg" alt="">
+            </div>
             <h4>Business</h4>
-            <img src="./assets/img/course-business.jpg" alt="">
             <p>COURSES</p>
             <p>Product Development, Business Development, Startup</p>
           </div>
 
           <div class="card">
+            <div class="img-container">
+              <img src="./assets/img/course-marketing.jpg" alt="">
+            </div>
             <h4>Marketing</h4>
-            <img src="./assets/img/course-marketing.jpg" alt="">
             <p>COURSES</p>
             <p>Analytics, Content Marketing, Mobile Marketing</p>
           </div>
@@ -221,9 +235,6 @@
 
           </div>
         </div>
-
-
-
 
       </div>
 
