fixed mobile responsive banner image

--- a/index.html
+++ b/index.html
@@ -50,8 +50,7 @@
       <div id="banner" class="section bg-dark">
 
         <div class="img-container">
-          <img class="desktop-only" src="./assets/img/banner.jpg" alt="">
-          <img class="mobile-only"src="./assets/img/banner.jpg" alt="">
+          <img  src="./assets/img/banner.jpg" alt="">
         </div>
 
         <div class="">
@@ -135,7 +134,7 @@
 
           <div class="card">
             <div class="img-container">
-              <img src="./assets/img/course-software.jpg" alt="">              
+              <img src="./assets/img/course-software.jpg" alt="">
             </div>
             <h4>Software engineering</h4>
             <p>COURSES</p>
