--- a/index.html
+++ b/index.html
@@ -86,9 +86,13 @@
         <div class="card-stack">
 
           <div class="card">
-            <div class="img-container">
+            <div class="img-container desktop-only">
               <img alt=""
               src="./assets/img/information-orientation.jpg">
+            </div>
+            <div class="img-container mobile-only">
+              <img alt=""
+              src="./assets/img/information-orientation-mobile.jpg">
             </div>
             <div class="">
               <h4>Orientation date</h4>
@@ -98,9 +102,13 @@
           </div>
 
           <div class="card">
-            <div class="img-container">
+            <div class="img-container desktop-only">
               <img alt=""
               src="./assets/img/information-campus.jpg">
+            </div>
+            <div class="img-container mobile-only">
+              <img alt=""
+              src="./assets/img/information-campus-mobile.jpg">
             </div>
             <div class="">
               <h4>Our campus</h4>
@@ -110,9 +118,13 @@
           </div>
 
           <div class="card">
-            <div class="img-container">
+            <div class="img-container desktop-only">
               <img alt=""
               src="./assets/img/information-guest-lecture.jpg">
+            </div>
+            <div class="img-container mobile-only">
+              <img alt=""
+              src="./assets/img/information-guest-lecture-mobile.jpg">
             </div>
             <div class="">
               <h4>Our guest lecture</h4>
