learning section h4 wrapped in a tag for button linking

--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
             <div class="img-container">
               <img src="./assets/img/course-software.jpg" alt="">
             </div>
-            <h4>Software engineering</h4>
+            <a href="#"><h4>Software engineering</h4></a>
             <p>COURSES</p>
             <p>Web Development, Mobile Development, iOT, APIs</p>
           </div>
@@ -157,7 +157,7 @@
             <div class="img-container">
               <img src="./assets/img/course-computer-art.jpg" alt="">
             </div>
-            <h4>Computer art</h4>
+            <a href="#"><h4>Computer art</h4></a>
             <p>COURSES</p>
             <p>Imaging & Design, Web Design, Motion Graphics & Visual Effects
             , Computer Animation</p>
@@ -167,7 +167,7 @@
             <div class="img-container">
               <img src="./assets/img/course-design.jpg" alt="">
             </div>
-            <h4>Design</h4>
+            <a href="#"><h4>Design</h4></a>
             <p>COURSES</p>
             <p>User Experience Design, User Research, Visual Design</p>
           </div>
@@ -176,7 +176,7 @@
             <div class="img-container">
               <img src="./assets/img/course-data.jpg" alt="">
             </div>
-            <h4>Data</h4>
+            <a href="#"><h4>Data</h4></a>
             <p>COURSES</p>
             <p>Data Sciene, Big Data, SQL, Data Visualization</p>
           </div>
@@ -185,7 +185,7 @@
             <div class="img-container">
               <img src="./assets/img/course-business.jpg" alt="">
             </div>
-            <h4>Business</h4>
+            <a href="#"><h4>Business</h4></a>
             <p>COURSES</p>
             <p>Product Development, Business Development, Startup</p>
           </div>
@@ -194,7 +194,7 @@
             <div class="img-container">
               <img src="./assets/img/course-marketing.jpg" alt="">
             </div>
-            <h4>Marketing</h4>
+            <a href="#"><h4>Marketing</h4></a>
             <p>COURSES</p>
             <p>Analytics, Content Marketing, Mobile Marketing</p>
           </div>
