--- a/index.html
+++ b/index.html
@@ -214,15 +214,17 @@
               <img src="./assets/img/banner.jpg" alt="">
             </div>
 
-            <h4>Reimagine urban</h4>
-            <p class="quote">"Curabitur vitae libero in ipsum porttitor
-              consequat. Aliquam et commodo lectus, nec consequat neque.
-              Sed non accumsan urna. Phasellus sed consequat ex. Etium eget
-              magna laoreet, efficitur dolor consequat, tristique ligula."</p>
+            <div class="desktop-only">
+              <h4>Reimagine urban</h4>
+              <p class="quote">"Curabitur vitae libero in ipsum porttitor
+                consequat. Aliquam et commodo lectus, nec consequat neque.
+                Sed non accumsan urna. Phasellus sed consequat ex. Etium eget
+                magna laoreet, efficitur dolor consequat, tristique ligula."</p>
+            </div>
 
           </div>
           <!-- Thesis Info-->
-          <div class="card-stack">
+          <div class="card-stack desktop-only">
 
             <div class="card">
               <div class="img-container">
