--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
           <img  src="./assets/img/banner.jpg" alt="">
         </div>
 
-        <div class="">
+        <div class="info">
           <h1>Learn something new everyday</h1>
           <h4>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h4>
           <a class="button" href="#">Start here</a>
@@ -71,7 +71,7 @@
             <img src="./assets/img/information-main.jpg" alt="">
           </div>
 
-          <div class="">
+          <div class="info">
             <h1>It doesn't hurt to keep practicing</h1>
             <p>"Curabitur vitae libero in ipsum porttitor
               consequat. Aliquam et commodo lectus, nec consequat neque.
