--- a/index.html
+++ b/index.html
@@ -56,7 +56,11 @@
         <div class="info">
           <h1>Learn something new everyday</h1>
           <h4>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h4>
-          <a class="button" href="#">Start here</a>
+
+          <div class="button">
+            <a href="#"><strong>Start here</strong></a>
+          </div>
+
         </div>
 
       </div>
