quote class created

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 
           <div class="info">
             <h1>It doesn't hurt to keep practicing</h1>
-            <p>"Curabitur vitae libero in ipsum porttitor
+            <p class="quote">"Curabitur vitae libero in ipsum porttitor
               consequat. Aliquam et commodo lectus, nec consequat neque.
               Sed non accumsan urna. Phasellus sed consequat ex. Etium eget
               magna laoreet, efficitur dolor consequat, tristique ligula."</p>
