card info class created and applied

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
               <img alt=""
               src="./assets/img/information-orientation-mobile.jpg">
             </div>
-            <div class="">
+            <div class="card-info">
               <h4>Orientation date</h4>
               <p>Tue 10/11 & Wed 10/12: 8am-3pm</p>
               <a href="#">Read more</a>
@@ -114,7 +114,7 @@
               <img alt=""
               src="./assets/img/information-campus-mobile.jpg">
             </div>
-            <div class="">
+            <div class="card-info">
               <h4>Our campus</h4>
               <p>Find which campus is close by you</p>
               <a href="#">Read more</a>
@@ -130,7 +130,7 @@
               <img alt=""
               src="./assets/img/information-guest-lecture-mobile.jpg">
             </div>
-            <div class="">
+            <div class="card-info">
               <h4>Our guest lecture</h4>
               <p>Join a keynote with Oliver Sack about music in medical
                 treatment</p>
