fixed information section css

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
               src="./assets/img/information-orientation-mobile.jpg">
             </div>
             <div class="card-info">
-              <h4>Orientation date</h4>
+              <h3>Orientation date</h3>
               <p>Tue 10/11 & Wed 10/12: 8am-3pm</p>
               <a href="#">Read more</a>
             </div>
@@ -115,13 +115,13 @@
               src="./assets/img/information-campus-mobile.jpg">
             </div>
             <div class="card-info">
-              <h4>Our campus</h4>
+              <h3>Our campus</h3>
               <p>Find which campus is close by you</p>
               <a href="#">Read more</a>
             </div>
           </div>
 
-          <div class="card">
+          <div class="card bg-dark">
             <div class="img-container desktop-only">
               <img alt=""
               src="./assets/img/information-guest-lecture.jpg">
@@ -131,7 +131,7 @@
               src="./assets/img/information-guest-lecture-mobile.jpg">
             </div>
             <div class="card-info">
-              <h4>Our guest lecture</h4>
+              <h3>Our guest lecture</h3>
               <p>Join a keynote with Oliver Sack about music in medical
                 treatment</p>
               <a href="#">Read more</a>
@@ -152,58 +152,73 @@
             <div class="img-container">
               <img src="./assets/img/course-software.jpg" alt="">
             </div>
-            <a href="#"><h4>Software engineering</h4></a>
-            <p>COURSES</p>
-            <p>Web Development, Mobile Development, iOT, APIs</p>
+            <div class="info">
+              <a href="#"><h4>Software engineering</h4></a>
+              <p>COURSES</p>
+              <p>Web Development, Mobile Development, iOT, APIs</p>
+            </div>
+
           </div>
 
           <div class="card">
             <div class="img-container">
               <img src="./assets/img/course-computer-art.jpg" alt="">
             </div>
-            <a href="#"><h4>Computer art</h4></a>
-            <p>COURSES</p>
-            <p>Imaging & Design, Web Design, Motion Graphics & Visual Effects
-            , Computer Animation</p>
+            <div class="info">
+              <a href="#"><h4>Computer art</h4></a>
+              <p>COURSES</p>
+              <p>Imaging & Design, Web Design, Motion Graphics & Visual Effects
+              , Computer Animation</p>
+            </div>
+
           </div>
 
           <div class="card">
             <div class="img-container">
               <img src="./assets/img/course-design.jpg" alt="">
             </div>
-            <a href="#"><h4>Design</h4></a>
-            <p>COURSES</p>
-            <p>User Experience Design, User Research, Visual Design</p>
+            <div class="info">
+              <a href="#"><h4>Design</h4></a>
+              <p>COURSES</p>
+              <p>User Experience Design, User Research, Visual Design</p>
+            </div>
           </div>
 
           <div class="card">
             <div class="img-container">
               <img src="./assets/img/course-data.jpg" alt="">
             </div>
-            <a href="#"><h4>Data</h4></a>
-            <p>COURSES</p>
-            <p>Data Sciene, Big Data, SQL, Data Visualization</p>
+            <div class="info">
+              <a href="#"><h4>Data</h4></a>
+              <p>COURSES</p>
+              <p>Data Sciene, Big Data, SQL, Data Visualization</p>
+            </div>
           </div>
 
           <div class="card">
             <div class="img-container">
               <img src="./assets/img/course-business.jpg" alt="">
             </div>
-            <a href="#"><h4>Business</h4></a>
-            <p>COURSES</p>
-            <p>Product Development, Business Development, Startup</p>
+            <div class="info">
+              <a href="#"><h4>Business</h4></a>
+              <p>COURSES</p>
+              <p>Product Development, Business Development, Startup</p>
+            </div>
           </div>
 
           <div class="card">
             <div class="img-container">
               <img src="./assets/img/course-marketing.jpg" alt="">
             </div>
-            <a href="#"><h4>Marketing</h4></a>
-            <p>COURSES</p>
-            <p>Analytics, Content Marketing, Mobile Marketing</p>
+            <div class="info">
+              <a href="#"><h4>Marketing</h4></a>
+              <p>COURSES</p>
+              <p>Analytics, Content Marketing, Mobile Marketing</p>
+            </div>
           </div>
 
         </div>
+
       </div>
 
       <!-- Thesis Section-->
