--- a/index.html
+++ b/index.html
@@ -230,7 +230,10 @@
           <div class="">
 
             <div class="img-container">
-              <img src="./assets/img/banner.jpg" alt="">
+              <video src="./assets/video/thesis.mp4" autoplay>
+                Your browser does not support this video tag.
+              </video>
+              
             </div>
 
             <div class="desktop-only">
