thesis section aligned to spec

--- a/index.html
+++ b/index.html
@@ -233,10 +233,10 @@
               <video src="./assets/video/thesis.mp4" autoplay>
                 Your browser does not support this video tag.
               </video>
-              
+
             </div>
 
-            <div class="desktop-only">
+            <div class="info desktop-only">
               <h4>Reimagine urban</h4>
               <p class="quote">"Curabitur vitae libero in ipsum porttitor
                 consequat. Aliquam et commodo lectus, nec consequat neque.
